# Sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  sdc_incident.md
.github/workflows/: ci-audit-ledger.yml  ci-correlation-engine.yml  ci-inference-monitor.yml  ci-integration.yml  ci-probe-agent.yml  ci-training-monitor.yml  release.yml  security-scan.yml
audit-ledger/: Cargo.toml  build.rs
audit-ledger/packaging/: Dockerfile
audit-ledger/packaging/helm/: Chart.yaml
audit-ledger/src/: lib.rs  main.rs
audit-ledger/src/compliance/: export.rs  iso27001_report.rs  mod.rs  soc2_report.rs
audit-ledger/src/grpc/: ingest_service.rs  mod.rs  query_service.rs  server.rs
audit-ledger/src/ledger/: entry.rs  merkle_chain.rs  mod.rs  pruning.rs  verification.rs
audit-ledger/src/storage/: mod.rs  postgres.rs
audit-ledger/src/storage/migrations/: 001_initial.sql  002_indices.sql  003_partitioning.sql
audit-ledger/src/util/: crypto.rs  metrics.rs  mod.rs
audit-ledger/tests/: compliance_test.rs  integration_test.rs  merkle_chain_test.rs
benchmarks/overhead_measurement/: inference_monitor_overhead.py  probe_overhead.py  training_monitor_overhead.py
benchmarks/scalability/: audit_ledger_throughput.py  correlation_engine_load.py
config/: sentinel.default.yaml
config/alerting/: alert_rules.yaml
correlation-engine/: Cargo.toml  build.rs
correlation-engine/benches/: bayesian_bench.rs  correlation_bench.rs
correlation-engine/packaging/: Dockerfile
correlation-engine/src/: lib.rs  main.rs
correlation-engine/src/alerting/: alert_manager.rs  mod.rs  pagerduty.rs  slack.rs  webhook.rs
correlation-engine/src/correlation/: bayesian_attribution.rs  causal_model.rs  engine.rs  mod.rs  pattern_matcher.rs  temporal_window.rs
correlation-engine/src/grpc/: anomaly_service.rs  config_service.rs  mod.rs  probe_service.rs  query_service.rs  server.rs
correlation-engine/src/health/: fleet_health.rs  gpu_health.rs  mod.rs  quarantine.rs
correlation-engine/src/storage/: audit_client.rs  event_store.rs  mod.rs  state_store.rs
correlation-engine/src/trust/: mod.rs  tmr_scheduler.rs  trust_graph.rs  voting.rs
correlation-engine/src/util/: config.rs  metrics.rs  mod.rs
correlation-engine/tests/: bayesian_test.rs  correlation_test.rs  quarantine_test.rs  trust_graph_test.rs
dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
deploy/: docker-compose.test.yml  docker-compose.yml
docs/: api-reference.md  architecture.md  calibration-guide.md  deployment-guide.md  operator-runbook.md  probe-development.md  sdc-primer.md  sdk-go.md  sdk-python.md
inference-monitor/: README.md  pyproject.toml  setup.cfg
inference-monitor/packaging/: Dockerfile
inference-monitor/packaging/helm/: Chart.yaml
inference-monitor/src/sentinel_inference/: __init__.py  config.py  grpc_client.py  metrics.py  monitor.py
inference-monitor/src/sentinel_inference/analyzers/: __init__.py  entropy_analyzer.py  kl_divergence.py  logit_analyzer.py  spectral_analyzer.py  statistical_tests.py
inference-monitor/src/sentinel_inference/interceptors/: __init__.py  base.py  generic_interceptor.py  triton_interceptor.py  trtllm_interceptor.py  vllm_interceptor.py
inference-monitor/src/sentinel_inference/signatures/: __init__.py  sketch.py  tensor_fingerprint.py
inference-monitor/tests/fixtures/: generate_fixtures.py
inference-monitor/tests/integration/: test_monitor_e2e.py
inference-monitor/tests/unit/: test_kl_divergence.py  test_logit_analyzer.py  test_tensor_fingerprint.py
probe-agent/: CMakeLists.txt  conanfile.py
probe-agent/packaging/: Dockerfile  sentinel-probe-agent.service
probe-agent/packaging/helm/: Chart.yaml
probe-agent/src/: main.cpp
probe-agent/src/agent/: agent.cpp  agent.h  config_manager.cpp  config_manager.h  grpc_client.cpp  grpc_client.h  grpc_client_noop.cpp  scheduler.cpp  scheduler.h
probe-agent/src/platform/: cuda_runtime.cpp  cuda_runtime.h  hip_runtime.cpp  hip_runtime.h  platform_detect.cpp  platform_detect.h
probe-agent/src/probes/: aes_probe.cu  aes_probe.h  fma_probe.cu  fma_probe.h  memory_probe.cu  memory_probe.h  probe_interface.h  register_file_probe.cu  register_file_probe.h  shared_memory_probe.cu  shared_memory_probe.h  sm_affinity.cu  sm_affinity.h  tensor_core_probe.cu  tensor_core_probe.h  transcendental_probe.cu  transcendental_probe.h
probe-agent/src/telemetry/: nvml_collector.cpp  nvml_collector.h  rocm_smi_collector.cpp  rocm_smi_collector.h  thermal_monitor.cpp  thermal_monitor.h  voltage_monitor.cpp  voltage_monitor.h
probe-agent/src/util/: crypto.cpp  crypto.h  logging.cpp  logging.h  metrics.cpp  metrics.h  metrics_noop.cpp  ring_buffer.h
probe-agent/tests/fixtures/: golden_answers.json
probe-agent/tests/integration/: test_agent_grpc.cpp  test_full_probe_cycle.cpp
probe-agent/tests/unit/: test_fma_probe.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_sm_affinity.cpp
proto/: buf.gen.yaml  buf.yaml
sdk/go/: go.mod  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/sentinel_sdk/: __init__.py  client.py  types.py
tools/sdc-injector/: CMakeLists.txt  README.md
tools/sdc-injector/src/: harness.py  injector.cu  scenarios.py
training-monitor/: README.md  pyproject.toml
training-monitor/packaging/: Dockerfile
training-monitor/packaging/helm/: Chart.yaml
training-monitor/src/sentinel_training/: __init__.py  metrics.py
training-monitor/src/sentinel_training/common/: __init__.py  anomaly_detector.py  config.py  grpc_client.py  recomputation.py
training-monitor/src/sentinel_training/jax/: __init__.py  gradient_monitor.py  pjit_monitor.py  transforms.py
training-monitor/src/sentinel_training/pytorch/: __init__.py  checkpoint_validator.py  ddp_divergence.py  gradient_monitor.py  hooks.py  loss_monitor.py
training-monitor/tests/integration/: test_jax_transform.py  test_pytorch_hook.py
training-monitor/tests/unit/: test_ddp_divergence.py  test_gradient_monitor.py  test_loss_monitor.py
(+52 files in other folders)
