[package]
name = "sentinel-correlation-engine"
version = "0.1.0"
edition = "2021"
authors = ["SENTINEL Team"]
description = "Correlation Engine for SENTINEL Silent Data Corruption detection framework"
license = "Apache-2.0"

[[bin]]
name = "correlation-engine"
path = "src/main.rs"

[lib]
name = "sentinel_correlation_engine"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC / Protobuf
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP / REST
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Math / Statistics
nalgebra = "0.32"
statrs = "0.16"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
config = "0.14"
dashmap = "5"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "correlation_bench"
harness = false

[[bench]]
name = "bayesian_bench"
harness = false
